--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -40,7 +40,7 @@
                 android:textSize="20sp" />
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/profilePic"
                 android:layout_width="103dp"
                 android:layout_height="105dp"
                 android:layout_gravity="center"
@@ -146,7 +146,7 @@
             app:layout_constraintVertical_bias="0.771" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/editTextEmailAddress"
             android:layout_width="151dp"
             android:layout_height="36dp"
             android:ems="10"
